--- a/000-default.conf
+++ b/000-default.conf
@@ -1,5 +1,5 @@
 <VirtualHost *:80>
-	ServerName localhost
+	ServerName backend
 	ServerAdmin webmaster@localhost
 	DocumentRoot /var/www/html
 	ErrorLog ${APACHE_LOG_DIR}/error.log
